# agent-memory

./: .envrc  .github-dashboard-e2e-e2e-label-pr-1782218497147.md  .gitignore  .semgrepignore  Cargo.toml  DESIGN-TRANSCRIPT.md  README.md  constraints.txt  justfile  pyproject.toml
.agents/memories/.iwe/: config.toml
.agents/proof-obligation-workflow/architecture/: owned-surface-ledger.md
.agents/proof-obligation-workflow/planning/: explicit-deferrals.md  implementation-plan.md  plan-minimization-review.md
.agents/proof-obligation-workflow/qc/: implementation-diff-audit.md  qc-status.md
.agents/proof-obligation-workflow/testing/: implementation-obligations.md  test-adequacy-report.md  test-plan.md
.github/workflows/: ambient.yml  review-pr.yml
.pr/: PR_BODY.md
rust/: lib.rs  ops.rs  render.rs
src/: slugify.pyi  yaml.pyi
src/agent_memory/: __init__.py  __main__.py  _iwe.pyi  cli.py  iwe.py  models.py  operations.py
src/agent_memory/cards/: __init__.py  config.py  dag.py  factory.py  loader.py  migration.py  storage.py  validation.py
src/agent_memory/defaults/: __init__.py  cards.yaml  global.toml
src/iwe2/: __main__.py  cli.py  frontmatter.py  models.py  operations.py
src/iwe2/cards/: __init__.py  config.py  dag.py  factory.py  loader.py  migration.py  storage.py  validation.py
src/iwe2/defaults/: __init__.py  cards.yaml  global.toml
tests/: test_card_dag.py  test_card_migration.py  test_card_object_list.py  test_card_storage.py  test_card_system.py  test_card_validation.py  test_card_validation_parity.py  test_cli_workflows.py  test_index_links.py  test_okf_reconciliation.py  test_operations_headings.py  test_packaging.py  test_plan_fields.py  test_status_lifecycle.py
