[package]
name = "agent-memory-iwe"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[lib]
name = "agent_memory_iwe"
path = "rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py314"] }
liwe = "0.3.2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
