[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "agent-memory"
version = "0.1.0"
description = "IWE-backed Markdown memory vault CLI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cyclopts>=3",
    "pydantic>=2",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.3",
    "tomli-w>=1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "types-PyYAML>=6",
]

[project.scripts]
agent-memory = "agent_memory.cli:main"

[tool.importlinter]
root_packages = ["agent_memory"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "CLI depends inward on operations and models"
type = "layers"
layers = [
    "agent_memory.cli",
    "agent_memory.operations",
    "agent_memory.models",
]

[tool.maturin]
python-source = "src"
module-name = "agent_memory._iwe"
manifest-path = "Cargo.toml"
features = ["pyo3/extension-module"]
