[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "agent-memory"
version = "0.1.0"
description = "IWE-backed Markdown memory vault CLI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cyclopts>=3",
    "markdown-it-py>=3",
    "pydantic==2.12.0",
    "python-frontmatter>=1.3.0",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.3",
    "tomli-w>=1",
]

[dependency-groups]
dev = [
    # pytest 9.1.x crashes collecting any module that uses `from __future__ import
    # annotations` under Python 3.14 (its traceback filter raises KeyError on
    # __tracebackhide__, masking a TypeError where it calls issubclass on the
    # __future__._Feature object). Pin below 9 until that regression is fixed upstream.
    "pytest>=8,<9",
    "types-PyYAML>=6",
]

[project.scripts]
agent-memory = "agent_memory.cli:main"

[tool.importlinter]
root_packages = ["agent_memory"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "CLI depends inward on operations and models"
type = "layers"
layers = [
    "agent_memory.cli",
    "agent_memory.operations",
    "agent_memory.models",
]

[tool.maturin]
python-source = "src"
module-name = "agent_memory._iwe"
manifest-path = "Cargo.toml"
features = ["pyo3/extension-module"]
